# cash

./: Cargo.toml  README.md  justfile
src/: args.rs  completer.rs  constants.rs  context.rs  grammar.pest  main.rs  result.rs  runtime.rs
src/lang/: ast.rs  block.rs  doc.rs  eval.rs  expr.rs  functions.rs  interpreter.rs  literal.rs  math.rs  pipe.rs  system.rs  type.rs
test/: test  ui
