[package]
name = "cash"
version = "0.1.0"
authors = ["Niklas Loeser <niklas@4loeser.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = "5.99.0"
anyhow = "1.0.32"
pest = "2.1.3"
pest_derive = "2.1.0"
linefeed = "0.6"
lazy_static = "1.4.0"
rand = "0.7.3"

[dependencies.clap]
version = "3.0.0-beta.2"
default-features = false

# Cherry-pick the features you'd like to use
features = [ "std", "suggestions", "color" ]